@@ -4,10 +4,8 @@ AUX dirsrv-snmp.initd 613 RMD160 ef358910b5f6737e383bb7d288c29c9a09590e7b SHA1 f
 AUX dirsrv.confd 72 RMD160 d5478a77018aeb727ba72217d3e67af3dcd669c9 SHA1 006d238cd3fd31b9019a2a1e5bff250192b05a91 SHA256 62d68e8ab4b2b1342a3418e6b067a99345a2806ec1575f6d49cd6c0d1cbb17bc
 AUX dirsrv.initd 2444 RMD160 98c94e90bcce879360e015b15e8f01c9a5ed7056 SHA1 12c251f89980cace18a0235132718116acb63be7 SHA256 67ffab81077a099c79b5cbb1628b07f29a8de10854996aae02d1cdf2c5ada3d0
 DIST 389-ds-base-1.2.5.tar.bz2 2791116 RMD160 7bc4af77a66f19f1ee5ea2dfe6678e0d4b09993f SHA1 40340cdf1d1816c5a6b97acfb770c1f5ad6f7f4a SHA256 564fa7fb368d6b0dacd9b237aa515a48f57ae7395f191ba17867a5506cdc0a43
-DIST 389-ds-base-1.2.6.a4.tar.bz2 2860430 RMD160 f3d0bff0f67b173258f9202d9bdf714b38f1ffd9 SHA1 8ec64d80426a55d5c77bc576a34e8568a94f322f SHA256 beb5f3713f17f0287ddf4f8bb595568d4ee355ab2b0f9b3ffa92d4e33c4bfa8a
 DIST 389-ds-base-1.2.6.rc2.tar.bz2 2867753 RMD160 4f0daa5c47b91d46006dff3811749b83b795dca3 SHA1 7a9c8e577dcec1e0d485b08f9ccbe18d26e4f430 SHA256 d9fd7d84c9cc9565bcf8837dd437519aad846231827e8c4a1053a6fb0d5675ff
 EBUILD 389-ds-base-1.2.5.ebuild 2918 RMD160 c855002d65617c5a24d9721382ddb0ae64bc284e SHA1 0b2fd59fd9c3f86e512977df9f67a1884a48df47 SHA256 539f66d017f7f026b513270a99617e3282154f0b2cf09c1520404737e52def46
-EBUILD 389-ds-base-1.2.6_alpha4.ebuild 3944 RMD160 a63fe0228402b9ab65922e462e4d932deceb09e9 SHA1 c2ec37c6615ee8a8300a9e54fb34c2681c6ce717 SHA256 79e1abea1703a04d7ccfb09833c793dca2319ed4d25f7b3784f7729c30e22c96
 EBUILD 389-ds-base-1.2.6_rc2.ebuild 3942 RMD160 ca28fb1328b73260f5d69de115818daa729c4122 SHA1 2056b5bfffbde031ffac035d1283d62cf0204203 SHA256 769dd8f5a0340618a0533381db25a9530576c0a0e08a02f1407a12cb5eae2bf2
-MISC ChangeLog 4051 RMD160 41d96afbd9628e6a74872a3d26bbcbc03dc47c44 SHA1 edc8155789340d4298339b7e6da03015be5bc96b SHA256 ac8288a68ae720b836a3929f6108d7515f8fb4ed0912a0bca4273b7778f4d146
+MISC ChangeLog 4141 RMD160 aab3cd8e9428086944ca9cfebfd54ccd2bfdeb35 SHA1 78f4acaea04163b53c2a7719447f21b990b209ab SHA256 81ee41486cd5880f14c29f071cf7ce77fd375a4e45bdd35469a13bb26f945c0b
 MISC metadata.xml 1184 RMD160 2a20686dd0bf46fc91567041430659699a24ab27 SHA1 a0f1e8fadfc1f0e91deab05fd4f9efba3a33e398 SHA256 222f5d5797a314c2f691dfb298d19ff85cfa61752db31a3204f84e345ab8b1f5
